--- a/ERP/Core.Erp.Web/Areas/Contabilidad/Views/ATS/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Contabilidad/Views/ATS/Nuevo.cshtml
@@ -68,7 +68,7 @@
                                    listBoxSettings.ControlStyle.Border.BorderWidth = 0;
                                    listBoxSettings.ControlStyle.BorderBottom.BorderWidth = 1;
 
-                                   listBoxSettings.Height = Unit.Pixel(200);
+                                   listBoxSettings.Height = Unit.Pixel(350);
                                    listBoxSettings.Width = Unit.Percentage(100);
 
                                    listBoxSettings.Properties.EnableSelectAll = true;
@@ -76,7 +76,7 @@
                                    listBoxSettings.Properties.SelectionMode = ListEditSelectionMode.CheckColumn;
                                    foreach (var item in ViewBag.lst_sucursal)
                                    {
-                                       listBoxSettings.Properties.Items.Add(item.Su_Descripcion, item.IdSucursal);
+                                       listBoxSettings.Properties.Items.Add(item.Su_Descripcion, item.IdSucursal).Selected = item.Seleccionado;
                                    }
                                    listBoxSettings.Properties.ClientSideEvents.SelectedIndexChanged = "updateText";
                                    listBoxSettings.Properties.ClientSideEvents.Init = "updateText";
