--- a/ERP/Core.Erp.Web/Areas/Inventario/Views/IngresoInventario/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Inventario/Views/IngresoInventario/Nuevo.cshtml
@@ -170,6 +170,14 @@ $(function () {
         CargarBodega();
     });
 });
+
+function OnSelectedProductoChanged() {
+    GridViewPartial_inv_det.GetEditor("IdUnidadMedida").PerformCallback();
+}
+function UnidadMedidaComboBox_BeginCallback(s, e) {
+    e.customArgs["in_IdProducto"] = IdProducto.GetValue();
+}
+
 function CargarBodega() {
 $("#IdBodega").empty();
 
@@ -196,4 +204,5 @@ $.ajax({
     }
     });
 };
+
 </script>
