--- a/ERP/Core.Erp.Web/Areas/Inventario/Views/IngresoInventario/Anular.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Inventario/Views/IngresoInventario/Anular.cshtml
@@ -135,6 +135,14 @@
                 CargarBodega();
             });
         });
+
+        function OnSelectedProductoChanged() {
+            GridViewPartial_inv_det.GetEditor("IdUnidadMedida").PerformCallback();
+        }
+        function UnidadMedidaComboBox_BeginCallback(s, e) {
+            e.customArgs["in_IdProducto"] = IdProducto.GetValue();
+        }
+
 function CargarBodega() {
         $("#IdBodega").empty();
 
