--- a/ERP/Core.Erp.Web/Areas/Produccion/Views/Fabricacion/Anular.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Produccion/Views/Fabricacion/Anular.cshtml
@@ -77,7 +77,7 @@
             </div>
         </div>
 
-        <div class="col-md-6">
+        @*<div class="col-md-6">
             <div class="col-md-4">
                 <div class="form-group">
                     <label for=""></label>
@@ -87,7 +87,7 @@
                 </div>
             </div>
 
-        </div>
+        </div>*@
 
     </div>
 
