--- a/ERP/Core.Erp.Web/Areas/Inventario/Views/Consignacion/_CmbProducto_Consignacion.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Inventario/Views/Consignacion/_CmbProducto_Consignacion.cshtml
@@ -15,6 +15,7 @@
 
         settings.Properties.Columns.Add("IdProducto", "ID", 20);
         settings.Properties.Columns.Add("pr_descripcion", "Producto", 80);
+        settings.Properties.ClientSideEvents.SelectedIndexChanged = "OnSelectedProductoChanged";
         settings.Properties.FilterMinLength = 3;
     })
 
