--- a/ERP/Core.Erp.Web/Areas/Inventario/Views/Consignacion/Modificar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Inventario/Views/Consignacion/Modificar.cshtml
@@ -142,4 +142,11 @@
         var win = window.open(location +"/Reportes/InventarioReportes/INV_014?IdEmpresa="+@Core.Erp.Web.Helps.SessionFixed.IdEmpresa+"&IdConsignacion="+@Model.IdConsignacion, '_blank');
         win.focus();
     }
+
+    function OnSelectedProductoChanged() {
+        GridView_ConsignacionDet.GetEditor("IdUnidadMedida").PerformCallback();
+    }
+    function UnidadMedidaComboBox_BeginCallback(s, e) {
+        e.customArgs["in_IdProducto"] = IdProducto.GetValue();
+    }
 </script>
