--- a/ERP/Core.Erp.Web/Areas/Inventario/Views/TransferenciasInventario/Modificar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Inventario/Views/TransferenciasInventario/Modificar.cshtml
@@ -21,6 +21,35 @@
         });
     });
 
+    function OnSelectedProductoChanged() {
+        GridViewPartial_transferencias_det.GetEditor("IdUnidadMedida").PerformCallback();
+    }
+    function UnidadMedidaComboBox_BeginCallback(s, e) {
+        e.customArgs["in_IdProducto"] = IdProducto.GetValue();
+    }
+
+    function SetUnidadMedida(s,e ) {
+        var datos = {
+            IdProducto: s.GetValue()
+        }
+        $.ajax({
+            type: 'POST',
+            data: JSON.stringify(datos),
+            url: '@Url.Action("SetUnidadMedida", "Producto", new { Area = "Inventario" })',
+            async: false,
+            bDeferRender: true,
+            bProcessing: true,
+            contentType: 'application/json; charset=utf-8',
+            success: function (data) {
+                console.log(IdProducto.GetValue());
+                console.log(data.IdUnidadMedida);
+                GridViewPartial_transferencias_det.GetEditor('IdUnidadMedida').SetValue(data.IdUnidadMedida);
+            },
+            error: function (error) {
+            }
+        });
+    };
+
     function CargarBodegaOrigen() {
         $("#IdBodegaOrigen").empty();
 
