--- a/ERP/Core.Erp.Web/Areas/Inventario/Views/TransferenciasInventario/_CmbProducto_TransferenciaInventario.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Inventario/Views/TransferenciasInventario/_CmbProducto_TransferenciaInventario.cshtml
@@ -18,7 +18,7 @@
         settings.Properties.Columns.Add("pr_descripcion", "Producto", 70);
         settings.Properties.Columns.Add("nom_categoria", "Categoria", 20);
         settings.Properties.ClientSideEvents.SelectedIndexChanged = "OnSelectedProductoChanged";
-        settings.Properties.ClientSideEvents.EndCallback = "SetUnidadMedida";
+        settings.Properties.ClientSideEvents.EndCallback = "function(s,e){SetUnidadMedida(s,e)}";
 
 
     })
